[package]
name = "testaustime-ls"
edition = "2024"
version.workspace = true
repository = "https://codeberg.org/midka/testaustime-zed"

[dependencies]
testaustime_shared = { path = "../shared" }
arc-swap = "1.8.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"], default-features = false }
tower-lsp = "0.20.0"
reqwest = { version = "0.12.28", features = ["json"] }
chrono = "0.4.42"
url = "2.5.7"
hostname = "0.4.2"
serde_json = "1.0.146"
